--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     function login() {
       const user = window.Telegram.WebApp.initDataUnsafe?.user;
       if (user) {
-        fetch('https://soulmatch-app-xxx.onrender.com/register', {
+        fetch('https://loveblr.onrender.com/register', {
           method: 'POST',
           headers: {'Content-Type': 'application/json'},
           body: JSON.stringify(user)
