--- a/index.html
+++ b/index.html
@@ -1,88 +1,117 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>SoulMatch</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <style>
-    body {
-      background: #0F0F12;
-      color: white;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      text-align: center;
-      padding-top: 60px;
-      margin: 0;
-    }
-    .logo {
-      font-size: 32px;
-      margin-bottom: 20px;
-      color: #FF2D75;
-    }
-    .btn {
-      background: #FF2D75;
-      color: white;
-      border: none;
-      padding: 14px 32px;
-      font-size: 18px;
-      border-radius: 30px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-    .status {
-      margin-top: 20px;
-      font-size: 16px;
-      color: #B0B0B0;
-    }
-  </style>
-</head>
-<body>
-  <div class="logo">❤️ SoulMatch</div>
-  <p>Знакомства прямо в Telegram</p>
-  <button class="btn" onclick="login()">Войти и начать</button>
-  <div class="status" id="status"></div>
+from fastapi import FastAPI, HTTPException, File, UploadFile
+from fastapi.responses import HTMLResponse, JSONResponse
+from pydantic import BaseModel
+from sqlalchemy import create_engine, Column, Integer, String, Boolean
+from sqlalchemy.ext.declarative import declarative_base
+from sqlalchemy.orm import sessionmaker
+import os
+import uuid
 
-  <script>
-    function login() {
-      const status = document.getElementById('status');
-      const initData = window.Telegram.WebApp.initData;
-      const user = window.Telegram.WebApp.initDataUnsafe?.user;
+# --- База данных ---
+DATABASE_URL = os.getenv("DATABASE_URL", "sqlite:///./test.db")
+engine = create_engine(DATABASE_URL, pool_pre_ping=True)
+SessionLocal = sessionmaker(autocommit=False, autoflush=False, bind=engine)
+Base = declarative_base()
 
-      if (!user) {
-        status.textContent = "Откройте приложение внутри Telegram!";
-        return;
-      }
+class UserDB(Base):
+    __tablename__ = "users"
+    id = Column(Integer, primary_key=True, index=True)
+    tg_id = Column(Integer, unique=True, index=True)
+    username = Column(String, nullable=True)
+    first_name = Column(String)
+    bio = Column(String, default="")
+    goal = Column(String, default="")  # chat, relationship, sex, hobby
+    height = Column(Integer, nullable=True)
+    weight = Column(Integer, nullable=True)
+    interests = Column(String, default="")  # через запятую: "кино,спорт"
+    photo_url = Column(String, default="")
+    is_premium = Column(Boolean, default=False)
 
-      status.textContent = "Сохраняю профиль...";
+Base.metadata.create_all(bind=engine)
 
-      fetch('https://loveblr.onrender.com/index.html', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          tg_id: user.id,
-          username: user.username,
-          first_name: user.first_name
-        })
-      })
-      .then(response => response.json())
-      .then(data => {
-        if (data.status === "ok") {
-          status.textContent = "✅ Готово! Переходи в главное меню.";
-          // Через 2 секунды можно перенаправить на профиль или поиск
-          setTimeout(() => {
-            alert("Теперь ты в системе! Скоро добавим поиск и лайки.");
-          }, 2000);
-        } else {
-          status.textContent = "❌ Ошибка: " + data.detail;
-        }
-      })
-      .catch(err => {
-        status.textContent = "❌ Не удалось подключиться к серверу.";
-        console.error(err);
-      });
+app = FastAPI()
+
+# --- Отдаём главную страницу ---
+@app.get("/", response_class=HTMLResponse)
+def read_root():
+    html_path = os.path.join(os.path.dirname(__file__), "index.html")
+    with open(html_path, "r", encoding="utf-8") as f:
+        return f.read()
+
+# --- Отдаём экран профиля ---
+@app.get("/profile", response_class=HTMLResponse)
+def profile_page():
+    html_path = os.path.join(os.path.dirname(__file__), "profile.html")
+    with open(html_path, "r", encoding="utf-8") as f:
+        return f.read()
+
+# --- Получаем данные пользователя ---
+@app.get("/api/user/{tg_id}")
+def get_user(tg_id: int):
+    db = SessionLocal()
+    user = db.query(UserDB).filter(UserDB.tg_id == tg_id).first()
+    db.close()
+    if not user:
+        raise HTTPException(status_code=404, detail="User not found")
+    return {
+        "tg_id": user.tg_id,
+        "username": user.username,
+        "first_name": user.first_name,
+        "bio": user.bio,
+        "goal": user.goal,
+        "height": user.height,
+        "weight": user.weight,
+        "interests": user.interests.split(",") if user.interests else [],
+        "photo_url": user.photo_url
     }
 
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-  </script>
-</body>
-</html>
+# --- Сохраняем профиль ---
+class ProfileUpdate(BaseModel):
+    tg_id: int
+    bio: str = ""
+    goal: str = ""
+    height: int = None
+    weight: int = None
+    interests: list = []
+
+@app.post("/api/profile")
+def update_profile(data: ProfileUpdate):
+    db = SessionLocal()
+    user = db.query(UserDB).filter(UserDB.tg_id == data.tg_id).first()
+    if not user:
+        db.close()
+        raise HTTPException(status_code=404, detail="User not found")
+    
+    user.bio = data.bio
+    user.goal = data.goal
+    user.height = data.height
+    user.weight = data.weight
+    user.interests = ",".join(data.interests)
+    
+    db.commit()
+    db.close()
+    return {"status": "ok"}
+
+# --- Регистрация (без изменений) ---
+class UserRequest(BaseModel):
+    tg_id: int
+    username: str = None
+    first_name: str
+
+@app.post("/register")
+def register(user: UserRequest):
+    db = SessionLocal()
+    db_user = db.query(UserDB).filter(UserDB.tg_id == user.tg_id).first()
+    if db_user:
+        db_user.username = user.username
+        db_user.first_name = user.first_name
+    else:
+        db_user = UserDB(
+            tg_id=user.tg_id,
+            username=user.username,
+            first_name=user.first_name
+        )
+        db.add(db_user)
+    db.commit()
+    db.close()
+    return {"status": "ok"}
