--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       status.textContent = "Сохраняю профиль...";
 
-      fetch('https://ТВОЙ_URL.onrender.com/register', {
+      fetch('https://loveblr.onrender.com/register', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
