--- a/index.html
+++ b/index.html
@@ -84,5 +84,8 @@
     Telegram.WebApp.ready();
     Telegram.WebApp.expand();
   </script>
+  <div style="margin-top: 30px;">
+  <button class="btn" onclick="window.location='/profile'">Редактировать профиль</button>
+</div>
 </body>
 </html>
