--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
   </script>
   <div style="margin-top: 30px;">
   <button class="btn" onclick="window.location='/profile'">Редактировать профиль</button>
+    <div style="margin-top: 20px;">
+  <button class="btn" onclick="window.location='/search'">🔍 Поиск партнёра</button>
+</div>
 </div>
 </body>
 </html>
