--- a/profile.html
+++ b/profile.html
@@ -26,6 +26,11 @@
       align-items: center;
       justify-content: center;
       font-size: 40px;
+      cursor: pointer;
+    }
+    .photo img {
+      width: 100%;
+      border-radius: 50%;
     }
     input, textarea, select {
       width: 100%;
@@ -67,7 +72,8 @@
 </head>
 <body>
   <div class="header">
-    <div class="photo">👤</div>
+    <div class="photo" id="photoPreview" onclick="document.getElementById('photoInput').click()">👤</div>
+    <input type="file" id="photoInput" accept="image/*" style="display:none;" onchange="uploadPhoto()">
     <h2>Мой профиль</h2>
   </div>
 
@@ -96,7 +102,6 @@
 
   <script>
     let userTgId = null;
-    const allInterests = ["кино", "спорт", "путешествия", "книги", "игры", "фитнес", "музыка", "еда", "наука", "искусство"];
 
     function init() {
       const user = window.Telegram.WebApp.initDataUnsafe?.user;
@@ -106,7 +111,6 @@
       }
       userTgId = user.id;
 
-      // Загружаем данные профиля
       fetch(`https://loveblr.onrender.com/api/user/${userTgId}`)
         .then(r => r.json())
         .then(data => {
@@ -115,6 +119,9 @@
           document.getElementById('height').value = data.height || '';
           document.getElementById('weight').value = data.weight || '';
           renderInterests(data.interests || []);
+          if (data.photo_url) {
+            document.getElementById('photoPreview').innerHTML = `<img src="${data.photo_url}">`;
+          }
         })
         .catch(err => {
           console.error("Ошибка загрузки профиля:", err);
@@ -161,6 +168,29 @@
         container.appendChild(el);
         input.value = '';
       }
+    }
+
+    function uploadPhoto() {
+      const fileInput = document.getElementById('photoInput');
+      const file = fileInput.files[0];
+      if (!file) return;
+
+      const formData = new FormData();
+      formData.append('file', file);
+      formData.append('tg_id', userTgId);
+
+      fetch('https://loveblr.onrender.com/api/upload-photo', {
+        method: 'POST',
+        body: formData
+      })
+      .then(r => r.json())
+      .then(data => {
+        document.getElementById('photoPreview').innerHTML = `<img src="${data.photo_url}">`;
+      })
+      .catch(err => {
+        alert("Не удалось загрузить фото");
+        console.error(err);
+      });
     }
 
     function saveProfile() {
